fix scroll issue on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -47,3 +47,9 @@ footer {
   margin: 25px;
   font-size: 1.5rem;
 }
+
+@media (max-width: 800px) {
+  html, body {
+    overflow-x: hidden;
+  }
+}
